--- a/src/cssFiles/styles.css
+++ b/src/cssFiles/styles.css
@@ -1,11 +1,12 @@
 .paddingNav {
-    padding-top: 39px;
-    padding-bottom: 39px;
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
 
 .imgStyle {
     width: 140px;
     height: 25px;
+    margin-right: 10px;
 }
 
 .backgroundImgStyle {
@@ -57,6 +58,21 @@
     font-weight: bold;
 }
 
-.plusStyle:hover{
-    color:white;
+.plusStyle:hover {
+    color: white;
+}
+
+.dropdown>.dropdown-menu {
+    top: 200%;
+    transition: 0.3s all ease-in-out;
+}
+
+.dropdown:hover>.dropdown-menu {
+    display: block;
+    top: 100%;
+}
+
+.dropdown>.dropdown-toggle:active {
+    /*Without this, clicking will make it sticky*/
+    pointer-events: none;
 }
