--- a/src/cssFiles/styles.css
+++ b/src/cssFiles/styles.css
@@ -36,6 +36,17 @@
     margin-top: 13px;
 }
 
+.videoNameStyle{
+    font-size: 25px;
+    line-height: 1;
+    font-weight: 300;
+    color: rgb(145, 255, 152);
+}
+
+#videoName{
+    margin-bottom: 20px;
+}
+
 .uploadButtonStyle {
     border-radius: 100%;
     font-size: 60px;
@@ -60,3 +71,10 @@
 .plusStyle:hover {
     color: white;
 }
+
+.inputStyle{
+    width:200px !important;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
